# innometrics-agent-os-linux

./: .gitignore  CMakeLists.txt  README.md
InnoMetricsSources/: CMakeLists.txt
InnoMetricsSources/Sources/: measurements_main.h
InnoMetricsSources/Sources/Helpers/: XInputListener.cpp  XInputListener.h
